package de.hhn.it.pp.components.snake;

public interface SnakeListener {
    void newState(State state);
}
