package de.hhn.it.pp.components.snake;

public enum State {
     CREATE_ITEM, CREATE_LEVEL, CREATE_ENEMY, MOVING, COLLIDED, GROWING, OVER
}
