package de.hhn.it.pp.components.snake.provider.logic;

/**
 * Enum class for all the directions the snake can go.
 *
 * @author Karen Hofele, Sören Greiner
 */
public enum Direction {
    LEFT, RIGHT, UP, DOWN
}
